--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                         </div>
                         <div class="services-content">
                             <h5 class="mb-3">Graphic Design</h5>
-                            <p class="text-muted mb-0">In a professional context it often happens that private clients corder a publication to be made.</p>
+                            <p class="text-muted mb-0">....</p>
                         </div>
                     </div>
                 </div>
@@ -309,7 +309,7 @@
                         </div>
                         <div class="services-content">
                             <h5 class="mb-3">Bootstrap support</h5>
-                            <p class="text-muted mb-0">In a professional context it often happens that private clients corder a publication to be made.</p>
+                            <p class="text-muted mb-0">...</p>
                         </div>
                     </div>
                 </div>
@@ -321,7 +321,7 @@
                         </div>
                         <div class="services-content">
                             <h5 class="mb-3">Portfolio of works</h5>
-                            <p class="text-muted mb-0">In a professional context it often happens that private clients corder a publication to be made.</p>
+                            <p class="text-muted mb-0">...</p>
                         </div>
                     </div>
                 </div>
@@ -333,7 +333,7 @@
                         </div>
                         <div class="services-content">
                             <h5 class="mb-3">Responsive Theme</h5>
-                            <p class="text-muted mb-0">In a professional context it often happens that private clients corder a publication to be made.</p>
+                            <p class="text-muted mb-0">...</p>
                         </div>
                     </div>
                 </div>
@@ -345,7 +345,7 @@
                         </div>
                         <div class="services-content">
                             <h5 class="mb-3">Go Beyond Limits</h5>
-                            <p class="text-muted mb-0">In a professional context it often happens that private clients corder a publication to be made.</p>
+                            <p class="text-muted mb-0">...</p>
                         </div>
                     </div>
                 </div>
@@ -357,7 +357,7 @@
                         </div>
                         <div class="services-content">
                             <h5 class="mb-3">Premium Slider</h5>
-                            <p class="text-muted mb-0">In a professional context it often happens that private clients corder a publication to be made.</p>
+                            <p class="text-muted mb-0">...</p>
                         </div>
                     </div>
                 </div>
@@ -665,7 +665,7 @@
                             <small class="text-muted"> CEO Management</small>
                         </div>
                     </div>
-                    <p class="mb-0 text-muted">" In a professional context it often happens that private or corporate clients corder a publication to be made.In a professional context it often happens that private or corporate clients corder a publication to be made. "</p>
+                    <p class="mb-0 text-muted">" ... "</p>
                 </div>
                 <!-- Testimonial Item-02 -->
                 <div class="testimonial-item box-border">
@@ -678,7 +678,7 @@
                             <small class="text-muted"> Marketing Head</small>
                         </div>
                     </div>
-                    <p class="mb-0 text-muted">" In a professional context it often happens that private or corporate clients corder a publication to be made.In a professional context it often happens that private or corporate clients corder a publication to be made. "</p>
+                    <p class="mb-0 text-muted">" ... "</p>
                 </div>
                 <!-- Testimonial Item-03 -->
                 <div class="testimonial-item box-border">
@@ -691,7 +691,7 @@
                             <small class="text-muted"> Design Strategist</small>
                         </div>
                     </div>
-                    <p class="mb-0 text-muted">" In a professional context it often happens that private or corporate clients corder a publication to be made.In a professional context it often happens that private or corporate clients corder a publication to be made. "</p>
+                    <p class="mb-0 text-muted">" ... "</p>
                 </div>
             </div>
         </div>
