--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
     <header id="header" class="header fixed-top">
         <nav id="scrollspy" class="navbar navbar-expand-lg header-nav">
             <div class="container-fluid">
-                <a class="navbar-brand font-weight-bold" href="#hero">Atomic<span class="base-color">Space</span></a>
+                <!--<a class="navbar-brand font-weight-bold" href="#hero">Atomic<span class="base-color">Space</span></a> -->
+                <a class="navbar-brand font-weight-bold" href="#hero"><img src="assets/img/atomic-space.png" width="100"  alt=""></a>
                 <!--  Navbar Toggler Button Start -->
                 <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#toggle-menu" aria-controls="toggle-menu" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="lni-menu size-md"></span>
@@ -263,7 +264,7 @@
                                         <div class="skill-bar-percent">75%</div>
                                     </div>
                                     <div class="skillbar clearfix" data-percent="100%">
-                                        <div class="skillbar-title"><span>Software Engineer</span></div>
+                                        <div class="skillbar-title"><span>SOFTWARE ENGINEER</span></div>
                                         <div class="skillbar-bar fill-skillbar"></div>
                                         <div class="skill-bar-percent">100%</div>
                                     </div>
