--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <div class="col-lg-6 mt-4 mt-lg-0">
                     <div class="personal-item ">
                         <h2 class="mb-0 base-color">Sobre mim</h2>
-                        <h5 class="text-dark my-3"><span class="base-color">Software Engineer</span> - Mobile & Web Developer</h5>
+                        <h5 class="text-dark my-3">Software Engineer <span class="base-color">-</span> Mobile & Web Developer</h5>
                         <div class="row">
                             <div class="col-6 personal-info">
                                 <ul class="list-unstyled">
@@ -167,7 +167,7 @@
                         </div>
                     </div>
                     <div class="button-border mt-3 mb-lg-0 mr-4">
-                        <a href="portfolio.pdf" class="pill-button">Curriculum Vitae</a>
+                        <a href="portfolio.pdf" class="pill-button" target="_blank">Curriculum Vitae</a>
                     </div>
                     <div class="button-border mt-3 mb-lg-0">
                         <a href="#contact" class="pill-button to-contact">Entre em Contato</a>
@@ -382,19 +382,19 @@
                 <!--   Portfolio Filters   -->
                 <ul id="portfolio-filter" class="list-unstyled list-inline mb-0 col-lg-12 portfolio-filter">
                     <li class="button-border list-inline-item">
-                        <a href="#" data-filter="*" class="pill-button active">All</a>
+                        <a href="#" data-filter="*" class=" active">All</a>
                     </li>
                     <li class="button-border list-inline-item">
-                        <a href="#" data-filter=".webdesign" class="pill-button">Web Design</a>
+                        <a href="#" data-filter=".webdesign" class="">Web Design</a>
                     </li>
                     <li class="button-border list-inline-item">
-                        <a href="#" data-filter=".mobiledesign" class="pill-button">Mobile Design</a>
+                        <a href="#" data-filter=".mobiledesign" class="">Mobile Design</a>
                     </li>
                     <li class="button-border list-inline-item">
-                        <a href="#" data-filter=".seo" class="pill-button">Seo</a>
+                        <a href="#" data-filter=".seo" class="">Seo</a>
                     </li>
                     <li class="button-border list-inline-item">
-                        <a href="#" data-filter=".graphic" class="pill-button">Graphic</a>
+                        <a href="#" data-filter=".graphic" class="">Graphic</a>
                     </li>
                 </ul>
             </div>
