--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <!-- Magnific Popup Css -->
         <link rel="stylesheet" href="assets/css/magnific-popup.css">
         <!-- Colors Css -->
-        <link rel="stylesheet" href="assets/css/color/orange-color.css" id="option-color">
+        <link rel="stylesheet" href="assets/css/color/purple.css" id="option-color">
         <!--  Custom Style CSS  -->
         <link rel="stylesheet" href="assets/css/main.css">
     </head>
@@ -105,7 +105,7 @@
                             <img src="https://placehold.co/250x250" alt="" class="rounded-circle">
                         </div>
                         <h3 class="dark-color mb-0 mt-3">Eu sou Everton Ferreira</h3>
-                        <h1 class="dark-color text-capitalize mb-3"><span class="base-color"></span> <span class="element" data-elements="Engenheiro da Computação.,Desenvolvedor WEB.,CTO da Booter c.o."></span></h1>
+                        <h1 class="dark-color text-capitalize mb-3"><span class="base-color"></span> <span class="element" data-elements="...,...,..."></span></h1>
                     
                     </div>
                 </div>
@@ -825,7 +825,7 @@
             <div class="row contact-info mt-5">
                 <div class="col-lg-4">
                     <div class="text-left">
-                        <div class="base-color">
+                        <div class="icon-color">
                             <i class="lni-phone-handset size-sm float-left pt-1"></i>
                         </div>
                         <div class="mt-3 info">
@@ -836,7 +836,7 @@
                 </div>
                 <div class="col-lg-4">
                     <div class="text-left">
-                        <div class="base-color">
+                        <div class="icon-color">
                             <i class="lni-pointer size-sm float-left pt-1"></i>
                         </div>
                         <div class="mt-3 info">
@@ -847,7 +847,7 @@
                 </div>
                 <div class="col-lg-4">
                     <div class="text-left">
-                        <div class="base-color">
+                        <div class="icon-color">
                             <i class="lni-map-marker size-sm float-left pt-1"></i>
                         </div>
                         <div class="mt-3 info">
