--- a/index.html
+++ b/index.html
@@ -630,13 +630,15 @@
             </div>
             <div class="row mt-4">
                 <div class="col-12 text-center pt-2">
-                    <div class="button-border d-inline-block mr-2 mr-sm-4">
-                        <button class="pill-button showMore" id="showMore">Show More</button>
+                    <div class="d-inline-block mr-2 mr-sm-4">
+                        <button class="showMore" id="showMore"><i class="fa fa-angle-double-down" size="5x"></i></button>
                         <span id="showMore-initials" class="d-none" class="d-none" data-initial="6" data-next="3"></span>
                     </div>
+                    <!--
                     <div class="button-border d-inline-block">
                         <a href="portfolio.html" class="pill-button">Portfolio Page</a>
                     </div>
+                    -->
                 </div>
             </div>
         </div>
