--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                                 </a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="#">
+                                <a href="https://www.linkedin.com/in/evertonferreira96/" target="_blank">
                                     <i class="fa fa-linkedin"></i>
                                 </a>
                             </li>
