--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
         </div>
 
         <div class="row">
-            <div class="col-lg-12 d-none=sm d-none-md">
+            <div class="col-lg-12 d-xs-none d-sm-none">
                 <div class="container-img"></div>
 
             </div>
