--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
         </div>
 
         <div class="row">
-            <div class="col-lg-12 d-xs-block d-sm-block d-md-block d-lg-block">
+            <div class="col-lg-12 d-xs-none d-sm-none d-md-block d-lg-block">
                 <div class="container-img"></div>
 
             </div>
