--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                             <h3 class="dark-color mb-0 mt-3">Eu sou Everton Ferreira</h3>
                             <h1 class="dark-color text-capitalize mb-3">
                                 <span class="base-color"></span>
-                                <span class="element" data-elements="...,...,..."></span></h1>
+                                <span class="element" data-elements="Engenheiro da Computação, Engenheiro de Software, Desenvolvedor FullStack, Desenvolvedor Mobile, CTO Atomic Space"></span></h1>
 
                         </div>
                     </div>
@@ -490,19 +490,22 @@
                     <!-- Portfolio Filters -->
                     <ul id="portfolio-filter" class="list-unstyled list-inline mb-0 col-lg-12 portfolio-filter">
                         <li class="button-border list-inline-item">
-                            <a href="#" data-filter="*" class=" active">All</a>
+                            <a href="#" data-filter="*" class=" active">Todos</a>
                         </li>
                         <li class="button-border list-inline-item">
-                            <a href="#" data-filter=".webdesign" class="">Web Design</a>
+                            <a href="#" data-filter=".webdesign" class="">React Native</a>
                         </li>
                         <li class="button-border list-inline-item">
-                            <a href="#" data-filter=".mobiledesign" class="">Mobile Design</a>
+                            <a href="#" data-filter=".mobiledesign" class="">React</a>
                         </li>
                         <li class="button-border list-inline-item">
-                            <a href="#" data-filter=".seo" class="">Seo</a>
+                            <a href="#" data-filter=".seo" class="">Angular.JS</a>
                         </li>
                         <li class="button-border list-inline-item">
-                            <a href="#" data-filter=".graphic" class="">Graphic</a>
+                            <a href="#" data-filter=".graphic" class="">ASP.NET</a>
+                        </li>
+                        <li class="button-border list-inline-item">
+                            <a href="#" data-filter=".graphic" class="">PHP</a>
                         </li>
                     </ul>
                 </div>
