--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Arshia - Fully Responsive Personal Template</title>
+        <title>atomic-space - Fully Responsive Personal Template</title>
         <meta name="description" content="" />
         <meta name="keywords" content="" />
         <meta name="author" content="Retrina Group" />
@@ -103,7 +103,7 @@
                             <h3>404 ERROR <i class="lni lni-emoji-sad"></i></h3>
                             <p>This is somewhat embarrassing, isn’t it?</p>
                             <div class="search w-100 search-404 mr-auto px-0 mx-lg-0">
-                                <form action="https://retrina.com/wp/arshia/" role="search" method="get">
+                                <form action="https://retrina.com/wp/atomic-space/" role="search" method="get">
                                     <div class="position-relative  form-group">
                                         <input type="text" placeholder="Enter your keywords..." id="search" name="s">
                                         <button type="submit" id="searchsubmit" class="btn"><i class="fa fa-search"></i></button>
@@ -188,7 +188,7 @@
     <!-- Map Js -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDRemITiP7JRWpZwLhVt-T2x5MeUFE2KWs"></script>
     <!--  Custom JS  -->
-    <script src="assets/js/arshia.js"></script>
+    <script src="assets/js/atomic-space.js"></script>
 
     </body>
 </html>
