--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Arshia - Fully Responsive Personal Template</title>
+        <title>atomic-space - Fully Responsive Personal Template</title>
         <meta name="description" content="" />
         <meta name="keywords" content="" />
         <meta name="author" content="Retrina Group" />
@@ -522,7 +522,7 @@
     <!-- Map Js -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDRemITiP7JRWpZwLhVt-T2x5MeUFE2KWs"></script>
     <!--  Custom JS  -->
-    <script src="assets/js/arshia.js"></script>
+    <script src="assets/js/atomic-space.js"></script>
 
     </body>
 </html>
