--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                             <h3 class="dark-color mb-0 mt-3">Eu sou Everton Ferreira</h3>
                             <h1 class="dark-color text-capitalize mb-3">
                                 <span class="base-color"></span>
-                                <span class="element" data-elements="Engenheiro da Computação, Engenheiro de Software, Desenvolvedor FullStack, Desenvolvedor Mobile, CTO Atomic Space"></span></h1>
+                                <span class="element" data-elements="Engenheiro da Computação, Engenheiro de Software, Analista FullStack, Analista Mobile, CTO Atomic Space"></span></h1>
 
                         </div>
                     </div>
@@ -221,7 +221,7 @@
                             </div>
                         </div>
                         <div class="button-border mt-3 mb-lg-0 mr-4">
-                            <a href="portfolio.pdf" class="pill-button" target="_blank">Curriculum Vitae</a>
+                            <a href="src/assets/img/portfolio.pdf" class="pill-button" target="_blank">Curriculum Vitae</a>
                         </div>
                         <div class="button-border mt-3 mb-lg-0">
                             <a href="#contact" class="pill-button to-contact">Entre em Contato</a>
@@ -441,8 +441,8 @@
                                     <i class="lni-brush-alt size-md base-color"></i>
                                 </div>
                                 <div class="services-content">
-                                    <h5 class="mb-3">Graphic Design</h5>
-                                    <p class="text-muted mb-0">....</p>
+                                    <h5 class="mb-3">Design Gráfico</h5>
+                                    <p class="text-muted mb-0">Em caso de seu interesse, podemos desenvolver toda a identidade visual de sua empresa ou produto, embasada nas melhores metodologias</p>
                                 </div>
                             </div>
                         </div>
@@ -453,8 +453,8 @@
                                     <i class="lni-check-mark-circle size-md base-color"></i>
                                 </div>
                                 <div class="services-content">
-                                    <h5 class="mb-3">Bootstrap support</h5>
-                                    <p class="text-muted mb-0">...</p>
+                                    <h5 class="mb-3">SEO</h5>
+                                    <p class="text-muted mb-0"> Não entregamos apenas um site, mas sim em sua divulgação e rankeamento no Google, com o intuito de aumentar as visualizações e rentabilidade </p>
                                 </div>
                             </div>
                         </div>
@@ -465,8 +465,8 @@
                                     <i class="lni-heart size-md base-color"></i>
                                 </div>
                                 <div class="services-content">
-                                    <h5 class="mb-3">Portfolio of works</h5>
-                                    <p class="text-muted mb-0">...</p>
+                                    <h5 class="mb-3">Dedicação e Carinho</h5>
+                                    <p class="text-muted mb-0">Desenvolvemos com carinho e dedicação soluções com o intuito de ser um agregador e impulsionar o seu negócio para um próximo nível</p>
                                 </div>
                             </div>
                         </div>
@@ -477,8 +477,8 @@
                                     <i class="lni-mobile size-md base-color"></i>
                                 </div>
                                 <div class="services-content">
-                                    <h5 class="mb-3">Responsive Theme</h5>
-                                    <p class="text-muted mb-0">...</p>
+                                    <h5 class="mb-3">Tema Responsivo</h5>
+                                    <p class="text-muted mb-0">O desenvolvimento da aplicação segue a metodologia Mobile First. Pensando nos dispositivos móveis, por conta do seu exponêncial crescimento.</p>
                                 </div>
                             </div>
                         </div>
@@ -489,8 +489,8 @@
                                     <i class="lni-world size-md base-color mb-0"></i>
                                 </div>
                                 <div class="services-content">
-                                    <h5 class="mb-3">Go Beyond Limits</h5>
-                                    <p class="text-muted mb-0">...</p>
+                                    <h5 class="mb-3">Aplicações Globais</h5>
+                                    <p class="text-muted mb-0">Possuímos experiência em sites com diversas nacionalidades. Não apenas se prendendo apenas em um público ou nacionalidade se desejar. </p>
                                 </div>
                             </div>
                         </div>
@@ -501,8 +501,8 @@
                                     <i class="lni-cup size-md base-color"></i>
                                 </div>
                                 <div class="services-content">
-                                    <h5 class="mb-3">Premium Slider</h5>
-                                    <p class="text-muted mb-0">...</p>
+                                    <h5 class="mb-3">Aplicações Premiadas</h5>
+                                    <p class="text-muted mb-0"> Alguns projetos foram premiados, pela construção da identidade e da aplicação. Estando no pódio em três oportunidades</p>
                                 </div>
                             </div>
                         </div>
@@ -528,19 +528,19 @@
                             <li class="list-inline-item">
                                 <a href="#" data-filter="*" class=" active">Todos</a>
                             </li>
-                            <li class="list-inline-item">
+                            <li class="list-inline-item d-none">
                                 <a href="#" data-filter=".webdesign" class="">React Native</a>
                             </li>
-                            <li class="list-inline-item">
+                            <li class="list-inline-item d-none">
                                 <a href="#" data-filter=".mobiledesign" class="">React</a>
                             </li>
-                            <li class="list-inline-item">
+                            <li class="list-inline-item d-none">
                                 <a href="#" data-filter=".seo" class="">Angular.JS</a>
                             </li>
-                            <li class="list-inline-item">
+                            <li class="list-inline-item d-none">
                                 <a href="#" data-filter=".graphic" class="">ASP.NET</a>
                             </li>
-                            <li class="list-inline-item">
+                            <li class="list-inline-item d-none">
                                 <a href="#" data-filter=".graphic" class="">PHP</a>
                             </li>
                         </ul>
@@ -552,7 +552,7 @@
                         <div class="col-12 text-center pt-2">
                             <div class="d-inline-block mr-2 mr-sm-4">
                                 <button class="showMore" id="showMore">
-                                    <i class="fa fa-angle-double-down"></i>
+                                    <i class="fa fa-circle size-md" ></i>
                                 </button>
                                 <span id="showMore-initials" class="d-none" data-initial="6" data-next="3"></span>
                             </div>
@@ -617,7 +617,7 @@
                                 <div class="testimonial-detail">
                                     <span class="d-block font-weight-bold">Flavio Shileid,</span>
                                     <small class="text-muted">
-                                        Desenvolvedor Sênior Java</small>
+                                        Analista Sênior Java e GVP</small>
                                 </div>
                             </div>
                             <p class="mb-0 text-muted">     
@@ -685,7 +685,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row d-none">
                         <div class="col-lg-12 mt-5 contact-form">
                             <form id="contactForm">
                                 <div class="row">
