--- a/portfolio-single.html
+++ b/portfolio-single.html
@@ -107,7 +107,7 @@
                             <a href="index.html">Home</a>
                         </li>
                         <li class="breadcrumb-item">
-                            <a href="portfolio.html">Portfolio</a>
+                            <a href="index.html">Portfolio</a>
                         </li>
                         <li class="breadcrumb-item breadcrumb-title"></li>
                     </ul>  
