--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                                         <li>
                                             <p>E-mail :
                                                 <span>
-                                                    ferreira.everton@icloud.com
+                                                <!--    ferreira.everton@icloud.com -->
                                                 </span>
                                             </p>
                                         </li>
@@ -353,7 +353,6 @@
         <!-- Career Start -->
         <section id="career" class="section py-5">
             <div class="container">
-
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="title-content mb-4">
@@ -411,19 +410,17 @@
                     </div>
                 </div>
 
+
             </div>
-
-            <div class="row mt-5">
-                <div class="col-lg-12 d-xs-none d-sm-none d-md-block d-lg-block">
-                    <div class="container-img"></div>
-
-                </div>
+            <div class="container-fluid">
+                  <div class="container-img"></div>
+            </div>
 
             </section>
             <!-- Carrer End -->
 
             <!-- Service Start -->
-            <section id="services" class="section services py-5">
+            <section id="services" class="section  services py-5">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12">
@@ -528,19 +525,19 @@
                             <li class="list-inline-item">
                                 <a href="#" data-filter="*" class=" active">Todos</a>
                             </li>
-                            <li class="list-inline-item d-none">
+                            <li class="list-inline-item">
                                 <a href="#" data-filter=".webdesign" class="">React Native</a>
                             </li>
-                            <li class="list-inline-item d-none">
+                            <li class="list-inline-item">
                                 <a href="#" data-filter=".mobiledesign" class="">React</a>
                             </li>
-                            <li class="list-inline-item d-none">
+                            <li class="list-inline-item">
                                 <a href="#" data-filter=".seo" class="">Angular.JS</a>
                             </li>
-                            <li class="list-inline-item d-none">
+                            <li class="list-inline-item">
                                 <a href="#" data-filter=".graphic" class="">ASP.NET</a>
                             </li>
-                            <li class="list-inline-item d-none">
+                            <li class="list-inline-item">
                                 <a href="#" data-filter=".graphic" class="">PHP</a>
                             </li>
                         </ul>
@@ -667,7 +664,7 @@
                                 </div>
                                 <div class="mt-3 info">
                                     <h5 class="mb-0">E-mail</h5>
-                                    <p class="text-muted">ferreira.everton@icloud.com</p>
+                                <!--    <p class="text-muted">ferreira.everton@icloud.com</p> -->
                                 </div>
                             </div>
                         </div>
