--- a/index.html
+++ b/index.html
@@ -682,9 +682,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row d-none">
+                    <div class="row">
                         <div class="col-lg-12 mt-5 contact-form">
-                            <form id="contactForm">
+                            <form action="sendEmail.php" method="POST">
                                 <div class="row">
                                     <div class="col-lg-6 form-item">
                                         <div class="form-group">
@@ -708,7 +708,7 @@
                                     </div>
                                     <div class="col-sm-12 mt-4 text-left">
                                         <div class="button-border">
-                                            <a href="javascript:void(0)" class="pill-button" id="submit-btn" onclick="sendEmail()">Enviar Mensagem</a>
+                                            <button type="submit" class="pill-button" id="submit-btn" onclick="">Enviar Mensagem</button>
                                         </div>
                                         <div id="message" class="toast" role="alert" aria-live="assertive" aria-atomic="true" data-delay="4000">
                                             <div class="toast-body d-inline-block"></div>
