--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row d-none">
                         <div class="col-lg-12 mt-5 contact-form">
                             <form action="sendEmail.php" method="POST">
                                 <div class="row">
@@ -736,40 +736,6 @@
                 <i class="lni-arrow-up"></i>
             </a>
 
-            <!-- Start Options -->
-            <div id="color-switcher" class="color-switcher d-none">
-                <div class="text-center color-pallet hide">
-                    <h6 class="theme-skin-title">Theme Skin</h6>
-                    <ul class="theme-skin list-inline">
-                        <li class="list-inline-item">
-                            <a href="javascript:void(0)" class="flat-skin active">Flat</a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="javascript:void(0)" class="neo-skin">Neo</a>
-                        </li>
-                    </ul>
-
-                    <h6 class="my-2 color-scheme-title">Light & Dark Version</h6>
-                    <ul class="color-scheme list-inline">
-                        <li class="list-inline-item">
-                            <a href="javascript:void(0)" class="light-scheme active">
-                                <i class="lni-sun"></i>
-                                Light</a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="javascript:void(0)" class="dark-scheme">
-                                <i class="lni-night"></i>
-                                Dark</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="pallet-button hide">
-                    <a href="#" class="cp-toggle">
-                        <i class="fa fa-cog fa-spin"></i>
-                    </a>
-                </div>
-            </div>
-            <!-- End Options -->
 
             <!-- JavaScripts -->
             <script src="src/assets/js/jquery-3.4.1.min.js"></script>
