--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <!-- Header Start -->
         <header id="header" class="header fixed-top">
             <nav id="scrollspy" class="navbar navbar-expand-lg header-nav">
-                <div class="container-fluid">
+                <div class="container-fluid rm">
                     <!--<a class="navbar-brand font-weight-bold" href="#hero">Atomic<span class="base-color">Space</span></a> -->
                     <a class="navbar-brand font-weight-bold" href="javascript:void(0);"><img src="src/assets/img/atomic-space.png" width="100" alt=""></a>
                     <!-- Navbar Toggler Button Start -->
@@ -123,7 +123,7 @@
 
         <!-- Hero Start -->
         <section class="section hero hero-01 full-screen p-0" id="hero">
-            <div class="container-fluid">
+            <div class="container-fluid rm">
                 <div class="text-center hero-content">
                     <div class="col-lg-12">
                         <div class="hero-content text-center">
@@ -412,7 +412,7 @@
 
 
             </div>
-            <div class="container-fluid">
+            <div class="container-fluid rm">
                   <div class="container-img"></div>
             </div>
 
@@ -625,7 +625,6 @@
                 </div>
             </section>
             <!-- Testimonial End -->
-
             
             <!-- Contact Start -->
             <section id="contact" class="section contact">
