--- a/index.html
+++ b/index.html
@@ -523,22 +523,28 @@
                         <!-- Portfolio Filters -->
                         <ul id="portfolio-filter" class="list-unstyled list-inline mb-0 col-lg-12 portfolio-filter">
                             <li class="list-inline-item">
-                                <a href="#" data-filter="*" class=" active">Todos</a>
+                                <a href="#" data-filter="*" class="active">Todos</a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="#" data-filter=".webdesign" class="">React Native</a>
+                                <a href="#" data-filter=".REACTNATIVE" class="">React Native</a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="#" data-filter=".mobiledesign" class="">React</a>
+                                <a href="#" data-filter=".REACT" class="">React</a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="#" data-filter=".seo" class="">Angular.JS</a>
+                                <a href="#" data-filter=".ANGULARJS" class="">Angular.JS</a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="#" data-filter=".graphic" class="">ASP.NET</a>
+                                <a href="#" data-filter=".ASPNET" class="">ASP.NET</a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="#" data-filter=".graphic" class="">PHP</a>
+                                <a href="#" data-filter=".PHP" class="">PHP</a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="#" data-filter=".WORDPRESS" class="">Wordpress</a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="#" data-filter=".NODE" class="">Node</a>
                             </li>
                         </ul>
                     </div>
