--- a/portfolio-single.html
+++ b/portfolio-single.html
@@ -41,7 +41,7 @@
     <!--    Header Start    -->
     <header id="header" class="header fixed-top">
         <nav id="scrollspy" class="navbar navbar-expand-lg header-nav">
-            <div class="container-fluid">
+            <div class="container-fluid rm">
                 <a class="navbar-brand font-weight-bold" href="index.html"><img src="src/assets/img/atomic-space.png" width="100" alt=""></a>
                 <!--  Navbar Toggler Button Start -->
                 <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#toggle-menu" aria-controls="toggle-menu" aria-expanded="false" aria-label="Toggle navigation">
